--- a/docker-compose-production.yml
+++ b/docker-compose-production.yml
@@ -1,23 +1,4 @@
-app:
-    image: busybox
-    volumes:
-        - .:/var/www/app
-        - ~/.composer:/root/.composer
-        - /tmpfs
-    tty: true
-nginx:
-    image: yappabe/nginx
-    links:
-        - php
-    volumes_from:
-        - app
+web:
+    build: ../docker-site
     environment:
-        DOCUMENT_ROOT: /var/www/app/web
-        INDEX_FILE: index.php
-        PHP_FPM_SOCKET: php:9000
-        VIRTUAL_HOST: brecht-franco.be
-php:
-    image: yappabe/php:7.0
-    working_dir: /var/www/app
-    volumes_from:
-        - app
+        DNSDOCK_ALIAS: brecht-franco.docker
